Add swing patch